--- a/index.html
+++ b/index.html
@@ -71,9 +71,10 @@
                     <h2 class="alt" style="font-weight: 500;">I'm a <strong>IoT Developer</strong>.</h2>
                 </header>
 
-                <p style="font-size: 0.9em;">ㅇㅇㅇㅇㅇ하는<br> 신입 IoT 개발자 한예솔입니다.</p>
+                <p style="font-size: 0.9em;">ㅇㅇㅇㅇㅇ하는</br> 신입 IoT 개발자 한예솔입니다.</p>
                 <!-- 당신을 위한 서비스를 개발하는 / -->
-                <br><br>
+                </br>
+                </br>
                 <p style="font-size: 0.7em; color: black;">* 모바일 모드보다는 데스크탑 모드를 권장드립니다.</p>
                 <footer>
                     <a href="#about" class="button scrolly">Introduce Me</a>
@@ -96,27 +97,35 @@
 
                 <p style="font-size: 0.8em; text-align: left;">
                     <mark style="font-weight:500;">"안녕하세요. 당신을 위한 서비스를 만드는 신입 IoT 개발자 한예솔입니다."</mark>
-                    <br/>무엇을 만들고 싶은지. 왜 IoT인지. 나의 비전이 뭔지.
+                    </br/>무엇을 만들고 싶은지. 왜 IoT인지. 나의 비전이 뭔지.
                 </p>
         </section>
 
         <!-- 3 techskills -->
         <section id="techskills" class="three">
-            <div class="container">
+            <div class="container skills">
 
                 <header>
                     <h2>Tech Skills</h2>
                 </header>
 
-                <p style="font-size: 0.8em;line-height: 1.5em;">제가 배운 사물인터넷(Internet of Things)이란
+                <p style="font-size: 0.8em;line-height: 1.5em;">1안)) 사물인터넷(Internet of Things)이란
                     </br> 사물들의 통신을 바탕으로 센싱한 정보를 가공하여 사용자에게 서비스를 액츄에이팅하는 것입니다.
                     </br> 스마트한 공간에 필요한 온도, 재실, 전력량 등 여러 센서들을 사용해 데이터를 모아서 가공하고,
-                    </br> Bluetooth, Wi-Fi, Socket, API 등을 이용해 통신하며,
-                    </br> 모니터링 및 관리(?)하는 활동을 할 수 있습니다.
-
+                    </br> Bluetooth, Wi-Fi, Socket, API 등을 이용해 통신하며 모니터링 및 관리하는 서비스를 말 합니다.
+                    </br> 4년 동안 IoT 플랫폼 외 <a style="font-weight: 500" title="IoT개론, 자료구조와 알고리즘, 임베디드 시스템, IoT 플랫폼, 컴퓨터 네트워크, 네트워크프로그래밍, 외 다수/아니면 성적증명서를 넣어버릴까요...?">여러 과목</a>에서 HW 회로 설계부터 SW 개발까지 학습했고,
                     </br>
-                    </br> 프로젝트 관리툴로는 github, slack, notion, google drive 등을 사용하였습니다.
-                    </br> (Java는 자신 없어서 뺐습니당.. 센싱을 따로 넣어야 할까요...)</br>
+
+                    </br> 2안)) 개발의 시작은 C의 기초로 탄탄하게 시작하였습니다. 이후 Java, C++, Python, Web 언어 등 여러 언어를 배움과 함께 <b>자료구조와 알고리즘</b>에 대해 공부했습니다.
+                    </br> IoT 개론을 통해 컴퓨터 구조부터 용어를 학습하였고, 전기전자논리회로를 통해 (간단한) <b>회로 설계와 HW 회로 제작</b>을 실습했습니다.
+                    </br> 이를 바탕으로 회로의 센서를 이용하여 임베디드 시스템, IoT 플랫폼 과목에서 <b>Arduino, RaspberryPi</b>를 활용하여 IoT 서비스을 개발했습니다.
+                    </br> <b>리눅스 프로그래밍</b>을 통해 Windows가 아닌 다른 환경에서의 개발을 할 수 있게 되었으며,
+                    </br> 컴퓨터 네트워크, 네트워크프로그래밍 과목을 통해 <b>Bluetooth, Wi-Fi, Socket, API 등 여러 통신</b> 개발도 가능해졌습니다.
+                    </br> 그리고 연구실의 연구학생으로 배운 기술들을 아울러 IoT 시스템이 적용된 <b>스마트 플러그, 공용 냉장고 內 도난 방지 시스템</b> 등의 프로젝트를 진행했습니다.
+                    </br>
+
+                    </br> 프로젝트 관리툴로는 Github, Slack, Notion, Google Drive 등을 사용하였습니다.
+                    </br>
                 </p>
 
                 <div class="row">
@@ -242,8 +251,8 @@
                             <header>
                                 <h3>그로잉밴드</h3>
                                 <p style="font-size: 0.9em; margin:0; line-height: 1.5em;"> #2019 #팀Project #아이디어
-                                    <br>#Lab_to_Market_최우수상
-                                    <br><a href="files/BIO대회_예선_참가확인증.jpg">#제6회_BIO창업아이디어경진대회<br>_예선작</a></p>
+                                    </br>#Lab_to_Market_최우수상
+                                    </br><a href="files/BIO대회_예선_참가확인증.jpg">#제6회_BIO창업아이디어경진대회</br>_예선작</a></p>
                             </header>
                         </article>
                         <article class="item">
@@ -251,7 +260,7 @@
                             <header>
                                 <h3>스마트 옷장</h3>
                                 <p style="font-size: 0.9em; margin:0; line-height: 1.5em;">#2019 #2인Project #아이디어
-                                    <br><a href="https://github.com/yesol-Han/IDEA/blob/main/%EC%8A%A4%EB%A7%88%ED%8A%B8%20%EC%98%B7%EC%9E%A5/SCH%EB%AF%B8%EB%94%94%EC%96%B4%EB%9E%A9%EC%8A%A4_%ED%95%99%EC%88%A0%EC%A0%9C%20%ED%8F%AC%EC%8A%A4%ED%84%B0_SMART%20CLOSET.pdf">#SCH미디어랩스_학술제_출품</a></p>
+                                    </br><a href="https://github.com/yesol-Han/IDEA/blob/main/%EC%8A%A4%EB%A7%88%ED%8A%B8%20%EC%98%B7%EC%9E%A5/SCH%EB%AF%B8%EB%94%94%EC%96%B4%EB%9E%A9%EC%8A%A4_%ED%95%99%EC%88%A0%EC%A0%9C%20%ED%8F%AC%EC%8A%A4%ED%84%B0_SMART%20CLOSET.pdf">#SCH미디어랩스_학술제_출품</a></p>
                             </header>
                         </article>
                     </div>
@@ -262,24 +271,24 @@
                             <header>
                                 <h3>공용 냉장고 內 도난 방지 시스템</h3>
                                 <p style="font-size: 0.9em; margin:0; line-height: 1.5em;">#2020 #2인Project
-                                    <br><a href="files/SecurIoT 금상.jpg">#캡스톤디자인대회_금상</a>
-                                    <br>#SCH미디어랩스_학술제_출품
-                                    <br><a href="files/ESW 결선진출.png">#임베디드SW_경진대회_결선</a>
-                                    <br><a href="files/창의적종합설계경진대회 참가인증서.pdf">#창의적_종합설계_경진대회</a></p>
+                                    </br><a href="files/SecurIoT 금상.jpg">#캡스톤디자인대회_금상</a>
+                                    </br>#SCH미디어랩스_학술제_출품
+                                    </br><a href="files/ESW 결선진출.png">#임베디드SW_경진대회_결선</a>
+                                    </br><a href="files/창의적종합설계경진대회 참가인증서.pdf">#창의적_종합설계_경진대회</a></p>
                             </header>
                         </article>
                         <article class="item">
                             <a href="https://github.com/yesol-Han/IDEA/tree/main/%EB%94%94%EC%A7%80%ED%84%B8%20%ED%97%8C%ED%98%88%EC%A6%9D%EC%84%9C%20%ED%94%8C%EB%9E%AB%ED%8F%BC" class="image fit"><img src="images/디지털 헌혈증서 플랫폼.png" alt="" /></a>
                             <header>
                                 <h3>디지털 헌혈증서 플랫폼</h3>
-                                <p style="font-size: 0.9em; margin:0; line-height: 1.5em;">#2020 #팀Project #캡스톤디자인대회 <br>#블록체인 #아이디어</p>
+                                <p style="font-size: 0.9em; margin:0; line-height: 1.5em;">#2020 #팀Project #캡스톤디자인대회 </br>#블록체인 #아이디어</p>
                             </header>
                         </article>
                         <article class="item">
                             <a href="https://github.com/yesol-Han/Arduino/tree/main/%EC%9B%B0%EB%8B%88%EC%8A%A4%20%EA%B0%95%EC%9D%98%EC%8B%A4" class="image fit"><img src="images/wellness강의실.png" alt="" /></a>
                             <header>
                                 <h3>웰니스 강의실</h3>
-                                <p style="font-size: 0.9em; margin:0; line-height: 1.5em;">#2018 #팀Project <br>#Lab_to_Market대회 <br>#일본워크숍_대표팀_선발</p>
+                                <p style="font-size: 0.9em; margin:0; line-height: 1.5em;">#2018 #팀Project </br>#Lab_to_Market대회 </br>#일본워크숍_대표팀_선발</p>
                             </header>
                         </article>
                     </div>
@@ -296,7 +305,7 @@
                             <a href="https://github.com/yesol-Han/IDEA/tree/main/%EB%A9%94%EB%8B%AC(Medical%20Calendar)" class="image fit"><img src="images/메달.png" alt="" /></a>
                             <header>
                                 <h3>메달(Medical Calendar)</h3>
-                                <p style="font-size: 0.9em; margin:0; line-height: 1.5em;">#2019-2020 #팀Project <br>#웹앱 #디바이스<br> #Lab_to_Market대회_우수상</p>
+                                <p style="font-size: 0.9em; margin:0; line-height: 1.5em;">#2019-2020 #팀Project </br>#웹앱 #디바이스</br> #Lab_to_Market대회_우수상</p>
                             </header>
                         </article>
                         <article class="item">
@@ -337,7 +346,8 @@
                             <header>
                                 <h3><a href="http://www.goodmorningcc.com/news/articleView.html?idxno=216318">Dream Mentor</a></h3>
                             </header>
-                            <p>2019.03 - 2020.08<br/> 진로를 고민하는 단계의 중,고등학생들을 만나 IoT를 소개하고 체험시켜주는 활동이었습니다. 학생들이 HW조립과 SW개발을 체험하는 과정에서 제가 느꼈던 IoT에 대한 열정을 다시 찾을 수 있었습니다.</p>
+                            <p>2019.03 - 2020.08
+                                </br/> 진로를 고민하는 단계의 중,고등학생들을 만나 IoT를 소개하고 체험시켜주는 활동이었습니다. 학생들이 HW조립과 SW개발을 체험하는 과정에서 제가 느꼈던 IoT에 대한 열정을 다시 찾을 수 있었습니다.</p>
                         </article>
 
                         <article>
@@ -345,7 +355,8 @@
                             <header>
                                 <h3><a href="/files/글로벌+융합교육+프로그램+결과보고서.pdf">일본 워크숍</a></h3>
                             </header>
-                            <p>2019.01 <br/>한국이 아닌 해외(일본)시장에서의 트랜드를 분석했습니다. 그리고 고안한 아이템(웰니스 강의실)에 대한 현지 설문조사와 현지 박람회 방문을 통해 해외 시장에서도 흥미롭게 바라볼만한 아이템에 대해 공부하는 기회가 되었습니다.</p>
+                            <p>2019.01
+                                </br/>한국이 아닌 해외(일본)시장에서의 트랜드를 분석했습니다. 그리고 고안한 아이템(웰니스 강의실)에 대한 현지 설문조사와 현지 박람회 방문을 통해 해외 시장에서도 흥미롭게 바라볼만한 아이템에 대해 공부하는 기회가 되었습니다.</p>
                         </article>
 
                         <article>
@@ -353,7 +364,8 @@
                             <header>
                                 <h3><a href="#">학생회</a></h3>
                             </header>
-                            <p>2017.03 - 2020.08 <br/> 4년 동안 학과에 대한 애정과 소속감을 바탕으로...... 봉사.. 동아리 활동 신청을 직접 만든 서버와 웹페이지를 배포하였다.</p>
+                            <p>2017.03 - 2020.08
+                                </br/> 4년 동안 학과에 대한 애정과 소속감을 바탕으로...... 봉사.. 동아리 활동 신청을 직접 만든 서버와 웹페이지를 배포하였다.</p>
                         </article>
 
                         <article>
@@ -361,7 +373,7 @@
                             <header>
                                 <h3>창업동아리</h3>
                             </header>
-                            <p>2018.09 - 2020.06 <br> 매 학기마다 아이템 생각해내는 일........ 여러가지 측면에서 생각하는 경험, </p>
+                            <p>2018.09 - 2020.06 </br> 매 학기마다 아이템 생각해내는 일........ 여러가지 측면에서 생각하는 경험, </p>
                         </article>
 
                         <article>
@@ -439,15 +451,15 @@
                 </header>
 
                 <details name='edu' onclick='onlyone(this)'>
-                    <summary>AWS 클라우스 교육 수료</summary>
+                    <summary>AWS Technical Essentials</summary>
                     <div class="tpt">
                         <table>
                             <tr>
                                 <td width="30%">
-                                    <p>내용 <br> 2021.01.18</p>
+                                    <p>AWS 기술 에센셜 교육 수료 </br> 2021.01.18</p>
                                 </td>
                                 <td width="70%">
-                                    <p>ㅇㅇㅇ</p>
+                                    <p>클라우드</p>
                                     <a href="files\20210118_AWS 클라우드 교육_수료증 (순천향대학교).pdf">AWS 클라우스 교육 수료증</a>
                                 </td>
                             </tr>
@@ -455,16 +467,17 @@
                     </div>
                 </details>
                 <details name='edu' onclick='onlyone(this)'>
-                    <summary>블록체인을 통한 Business Insight 정보기술전략 수료</summary>
+                    <summary>Business Insight Information Technology Strategy through Blockchain</summary>
                     <div class="tpt">
-                        <table>
+                        <table style="margin-bottom: 0;">
                             <tr>
                                 <td width="30%">
-                                    <p>블록체인 <br> 2019.08.19 - 08.20</p>
+                                    <p>블록체인을 통한 Business Insight 정보기술전략 수료</br> 2019.08.19 - 08.20</p>
                                 </td>
                                 <td width="70%">
-                                    <p>ㅇㅇㅇ</p>
-                                    <a href="files\블록체인 수료증.jpg">블록체인을 통한 Business Insight 정보기술전략(20010101) 수료증</a>
+                                    <p>블록체인에 대해 겉으로의 상식은 알고 있으나 활용하기 위해서는 어떤 구조이고 어떤 특징이 있는지 정확히 알고 싶었습니다. 블록체인의 기본 이론과 개발구조, 3세대에 걸친 발전과정, 활용가능성에 대하여 학습하였습니다.
+                                    </p>
+                                    <a href="files\블록체인 수료증.jpg">한국 생산성 본부 수료증(20010101)</a>
                                 </td>
                             </tr>
                         </table>
@@ -472,29 +485,32 @@
                 </details>
                 <details name='edu' open onclick='onlyone(this)'>
                     <summary>SCH UNIVERSITY</summary>
-                    <div class="tpt" style="height:130px;">
-                        <table>
+                    <div class="tpt">
+                        <table style="margin-bottom: 0;">
                             <tr>
                                 <td width="30%">
-                                    <p>순천향대학교 졸업예정 <br> - 사물인터넷학과 본전공 <br> - 스마트케어 복수전공 <br> 2017.03 - 현재</p>
+                                    <p>순천향대학교 졸업 예정 </br> - 사물인터넷학과 본전공 </br> - 스마트케어 복수전공 </br> 2017.03 - 현재</p>
                                 </td>
                                 <td width="70%">
-                                    <p>4년동안 성적우수 및 프라임 장학금을 통해 등록금 전액 무료, 사물인터넷의 전반적인 구조에 대해 학습함으로써 하드웨어부터 소프트웨어까지 전반적으로 다루어 볼 수 있었습니다. ~~ 창업이라는 과목을 통해 아이템을 더 현실적으로 기획하고 개발할 수 있게 되었습니다.</p>
+                                    <p>4년 동안 성적우수 및 프라임 융합인재 장학금을 통해 등록금 전액을 지원받아 공부했습니다. 사물인터넷의 전반적인 구조에 대해 학습함으로써 하드웨어부터 소프트웨어까지의 개발을 교육받았습니다. 스마트케어의 창업이라는 과목을 통해 아이템을 더 현실적으로 기획하고 개발할 수 있게 되었으며, 의료 분야에 필요한 센싱 개발 및 활동을 경험해 볼 수 있었습니다.</p>
                                 </td>
                             </tr>
                         </table>
                     </div>
                 </details>
                 <details name='edu' onclick='onlyone(this)'>
-                    <summary>초당고</summary>
-                    <div class="tpt" style="height:130px;">
-                        <table>
+                    <summary>CHO-DANG HIGH SCHOOL</summary>
+                    <div class="tpt">
+                        <table style="margin-bottom: 0;">
                             <tr>
                                 <td width="30%">
-                                    <p>초당고등학교 졸업 <br> - 과학중점 과정 <br> 2014.03 - 2017.02</p>
+                                    <p>초당고등학교 졸업 </br> - 과학중점 과정 </br> 2014.03 - 2017.02</p>
                                 </td>
                                 <td width="70%">
-                                    <p>여러가지 과학을 배우다 보니 어디에 관심이 생겼고. 수학, 화학동아리 활동했던거. 전문지식 매력에 어쩌고. 아니면 성격영향을 생각하기</p>
+                                    <p>
+
+
+                                        과학 교과목 담임선생님들의 영향으로 과학에 관심을 갖게 되었고 과학 중점 과정을 공부하며 이과적 공부가 저와 맞다는 것을 알게되었습니다. 수학, 화학동아리에 부원으로 활동하면서 전문지식 매력에 빠졌고 </p>
                                 </td>
                             </tr>
                         </table>
